# multi-agent

./: .env.example  .gitignore  003.sql  20.json  21-april-log.md  CORE_TO_RUST.md  DASHBOAD_PLAN.md  DASHBOARD.md  DASHBOARD_TASKS.md  HK.md  INPUT-EXT.md  India-AI.md  LICENSE.md  MANUAL_TESTING.md  MAX_STEPS.md  MPMC.html  POSTGRESS-FIRST.md  README.md  STREAM_PLAN.md  adaptive-agent-gateway-diagrams.md  agen-contracts-v1.4.md  agen-design-v2-parallel-children.md  agen-runtime-v1.4-algorithms.md  agen-spec-v1.4.md  agen-v1.4-research-budget-plan.md  anal-log.md  anal-skill-01-log.md  analysis-default.txt  analysis-research.txt  analysis-standard.txt  corrected.html  elixir-llm.md  hook-manual-test.ts  ipl_2026_playoff_predictions.md  ipl_2026_predictions.json  ipl_simulation.py  ipl_simulation_complete.py  list_files.sh  monte_carlo_simulation_results.md  optimis-report.html  (+35 more)
evals/Day2/: rust-tutorial-grok4.1Fast.md  rust-tutorial-misral-large.md  rust-tutorial-mistral-large.md  rust-tutorial-mistral-medium.md  rust-tutorial-qwen3.5-27b.md  rust-tutorial-qwen3_5.md  scores-grok-4.1-fast.json  scores-mistral-large.json  scores-qwen3.5-27b.json  scores.md  west-asia-bulletin-mistral-medium.html  west-asia-bulletin-qwen3.5-27b.html  west_asia_situation_bulletin_2026-04-02.txt
evals/Day3/gemma4/: README.md  quick_test.py  requirements.txt  scene_analyzer.py
evals/Day4/: Notes-sandbox-struggle.txt  polar_scatter_tutorial.md  polar_scatter_tutorial.py
evals/Day5/gog/: 0-Prompt-gog.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  gogcli-agent-integration.md  gogcli_examples.py  gogcli_wrapper.py  gogcli_wrapper.pyi  pyproject.toml  requirements.txt  test_gogcli_wrapper.py
examples/: README.md  aa-config.ts  aa.ts  ex-markdown.ts  ipl-bulletin.test.ts  ipl-bulletin.ts  ipl.sh  ipl2.sh  list-skills.ts  run-agent.ts  wa.txt  writing.sh
examples/skills/bmi-calculator/: SKILL.md  handler.ts
examples/skills/code-executor/: SKILL.md  handler.test.ts  handler.ts
examples/skills/cricket-analyst/: SKILL.md  cache.test.ts  cache.ts  cricket-analyst.test.ts  data-source.ts  fixtures-action.test.ts  fixtures-action.ts  handler.ts  no-network.test.ts  pipeline.test.ts  pipeline.ts  player-form.test.ts  player-form.ts  points-table.test.ts  points-table.ts  stylist.test.ts  stylist.ts  types.ts
examples/skills/cricket-analyst/fixtures/: ipl-2026-fixtures.json  ipl-2026-player-form.json  ipl-2026-points-table.json
examples/skills/file-analyst/: SKILL.md
examples/skills/log-analyser/: SKILL.md
examples/skills/monte-carlo/: SKILL.md  handler.ts  monte-carlo.test.ts  prng.ts  seeding.test.ts  simulate-match.test.ts  simulate-match.ts  simulate-tournament.test.ts  simulate-tournament.ts  types.ts
examples/skills/researcher/: SKILL.md
examples/skills/shell-exec/: SKILL.md
scripts/: gateway-run-tasks.sh  render-markdown.ts
tasks/: prd-file-log-performance-analyzer.md  prd.json  progress.txt
tasks/ipl-bulletin-skills/: generate-sample.ts  prd.json  progress.txt  sample-bulletin.html  sample-bulletin.test.ts
