[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gogcli-wrapper"
version = "1.0.0"
description = "Production-ready Python wrapper for gogcli with agentic framework support"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "GOG CLI Wrapper Contributors"}
]
maintainers = [
    {name = "GOG CLI Wrapper Contributors"}
]
keywords = [
    "gog",
    "gogcli",
    "gog-com",
    "games",
    "langchain",
    "crewai",
    "llamaindex",
    "agents",
    "wrapper",
    "cli"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Games/Entertainment",
]
requires-python = ">=3.9"
dependencies = []  # No required dependencies

[project.optional-dependencies]
langchain = [
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "pydantic>=2.0.0",
]

crewai = [
    "crewai>=0.30.0",
]

llamaindex = [
    "llama-index>=0.10.0",
    "llama-index-core>=0.10.0",
]

all = [
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "pydantic>=2.0.0",
    "crewai>=0.30.0",
    "llama-index>=0.10.0",
    "llama-index-core>=0.10.0",
]

dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]

docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/gogcli-wrapper"
Documentation = "https://github.com/yourusername/gogcli-wrapper#readme"
Repository = "https://github.com/yourusername/gogcli-wrapper.git"
Issues = "https://github.com/yourusername/gogcli-wrapper/issues"
Changelog = "https://github.com/yourusername/gogcli-wrapper/blob/main/CHANGELOG.md"

[project.scripts]
gogcli-wrapper = "gogcli_wrapper:main"

[tool.setuptools]
py-modules = ["gogcli_wrapper"]
include-package-data = true

[tool.setuptools.packages.find]
include = ["gogcli_wrapper*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["gogcli_wrapper"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--cov=gogcli_wrapper",
    "--cov-report=term-missing",
    "--cov-report=html",
]
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["gogcli_wrapper"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
